--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -18,3 +19,8 @@ a {
 * {
   box-sizing: border-box;
 }
+
+div#__next,
+      div#__next > div {
+        height: 100%;
+      }
